--- a/framework/public/css/custom.css
+++ b/framework/public/css/custom.css
@@ -85,3 +85,17 @@ h1.title {
 
 .space {
 	padding: 20px; }
+
+.row{
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 0;
+	margin-bottom: 0;
+	max-width: none;
+}
+
+div.alternate{
+	background:#AAC3F0;
+	
+}
