--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -12,6 +12,7 @@ html(ng-app='ngAddApp', lang='en')
 		link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.css')
 		link(rel='stylesheet', href='css/custom.css')
 		link(href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css')
+		link(href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css')
 		link(rel='icon', type='image/png', href='/img/favicon.png')
 	body(ng-controller='MainCtrl')
 		block bodyContent
