--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -17,10 +17,10 @@ block bodyContent
 					ul.right
 						block rightBar
 						li.has-dropdown
-							a(href='#') Logout
+							a(href='#') Settings
 							ul.dropdown
 								li
-									a(href='#') First link in dropdown
+									a(href='/logout') Logout
 					//
 						 Left Nav Section
 					ul.left
@@ -33,8 +33,6 @@ block bodyContent
 									input(type='text', placeholder='Search...' style='height:2.098rem')
 								.large-4.columns
 									a.alert.button.expand(href='#' style='padding-bottom: .51rem;') Search
-		br
-		br
 
 	//These are populated by extension views
 	block pageTitle
